After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 694184 - Wrong code organisation in case of collision in rtpsession
Wrong code organisation in case of collision in rtpsession
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
1.0.5
Other Linux
: Normal normal
: 1.0.6
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-02-19 15:48 UTC by Paul HENRYS
Modified: 2013-02-22 10:14 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (1.12 KB, patch)
2013-02-19 15:48 UTC, Paul HENRYS
none Details | Review

Description Paul HENRYS 2013-02-19 15:48:26 UTC
Created attachment 236779 [details] [review]
Patch

In rtpsession.c, change_ssrc field of RTPSession should be set before calling  rtp_session_schedule_bye_locked() as this function will call reconsider function that will wake up rtcp_thread which will call rtp_session_on_timeout() that will check change_ssrc to change the ssrc.
Indeed currently, there is a risk that rtp_session_on_timeout() is called before change_ssrc is updated.
Comment 1 Wim Taymans 2013-02-22 07:32:19 UTC
commit a158d6111f1d42024bc314d65633615869a5fdcd
Author: Paul HENRYS <visechelle@gmail.com>
Date:   Wed Feb 13 10:46:54 2013 +0100

    rtpsession: Fix wrong code organisation in case of collision
    
    change_ssrc field of RTPSession should be set before calling
    rtp_session_schedule_bye_locked () as this function will call reconsider fun
    that will wake up rtcp_thread which will call rtp_session_on_timeout () that
    check change_ssrc to change the ssrc.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=694184
Comment 2 Nicola 2013-02-22 10:14:42 UTC
could you please apply to 0.10 too? thanks